# translator-BOT-reborn

./: .gitignore  LICENSE.md  README.md  ai.py  calendar_handling.py  code_manager.py  commands.py  config.py  connection.py  database.py  devtools.py  discord_utils.py  dupe_detector.py  edit_tracker.py  error.py  image_handling.py  languages.py  main_chinese_reference.py  main_hermes.py  main_wenju.py  main_wenyuan.py  main_zhongsheng.py  main_ziwen.py  maintenance.py  messaging.py  notifications.py  points.py  pyproject.toml  reddit_sender.py  request_closeout.py  requirements.txt  responses.py  search_handling.py  startup.py  statistics.py  time_handling.py  title_handling.py  usage_statistics.py  utility.py  verification.py  (+1 more)
Data/: _statistics.json  _ua.yaml  responses.yaml
Data/Datasets/: _statistics.json  countries.csv  iso_codes.csv  language_data.yaml
Data/Settings/: languages_settings.yaml  settings.yaml  (+3 more)
_data/: responses.yaml
commands/: __init__.py  claim.py  doublecheck.py  identify.py  long.py  lookup_cjk.py  lookup_wp.py  missing.py  nuke.py  page.py  reset.py  search.py  set.py  transform.py  translated.py  verify.py
docs/: ai_usage.md  architecture.md  chinese_reference.md  commands.md  commands_discord.md  data_files.md  deprecated.md  development.md  hermes.md  index.md  language_processing.md  lookup.md  messages.md  models.md  points.md  technical.md  title_processing.md  verification.md  version_history.md  wenju.md  wenyuan.md
hermes/: __init__.py  hermes_database.py  matching.py  reporting.py  tools.py
integrations/: ai.py  discord_utils.py  http.py  image_handling.py  search_handling.py
lang/: code_standards.py  countries.py  languages.py
lookup/: async_helpers.py  cache_helpers.py  ja.py  ko.py  match_helpers.py  osm.py  other.py  reference.py  wiktionary.py  wp_utils.py  zh.py
models/: ajo.py  diskuto.py  instruo.py  komando.py  kunulo.py  lingvo.py  titolo.py
monitoring/: action_statistics.py  dupe_detector.py  edit_tracker.py  language_frequency.py  points.py  request_closeout.py  runtime_metrics.py  usage_statistics.py  user_statistics.py
processes/: wenyuan_stats.py  ziwen_bot.py  ziwen_commands.py  ziwen_comments.py  ziwen_messages.py  ziwen_posts.py
reddit/: connection.py  messaging.py  notifications.py  reddit_sender.py  startup.py  verification.py  wiki.py
scheduler/: lock.py  process.py  runner.py
tasks/: __init__.py  community_digest.py  data_maintenance.py  iso_updates.py  moderator_digest.py  request_closeout.py  status_report.py
testing/: __init__.py  devtools.py
title/: title_ai.py  title_handling.py
wenju/: __init__.py  community_digest.py  data_maintenance.py  hermes_reporting.py  iso_updates.py  moderation_monitoring.py  moderator_digest.py  moderator_reporting.py  moderator_update.py  public_statistics.py  sidebar_updates.py  status_report.py  subreddit_maintenance.py
wenyuan/: __init__.py  challenge_poster.py  code_manager.py  data_validator.py  monthly_reporting.py  period_statistics.py  title_full_retrieval.py  update_wiki_stats.py
zhongsheng/: __init__.py  cjk.py  comment.py  describe.py  error.py  filter.py  guide.py  info.py  lang.py  notif.py  office.py  post.py  recruit.py  search.py  status.py  title.py  user.py
ziwen_commands/: __init__.py  calendar.py  claim.py  doublecheck.py  identify.py  long.py  lookup_cjk.py  lookup_wp.py  lookup_wt.py  missing.py  nuke.py  page.py  reset.py  search.py  set.py  transform.py  translated.py  verify.py
ziwen_lookup/: __init__.py  async_helpers.py  cache_helpers.py  ja.py  ko.py  match_helpers.py  normalization.py  osm.py  reference.py  wiktionary.py  wp_utils.py  zh.py
(+60 files in other folders)
