[project]
name = "translator-BOT"
version = "2.2.1"
description = "Automated moderator routines for r/translator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kungming2"},
    {name = "youraveragebear"},
]

[project.optional-dependencies]
dev = ["types-PyYAML", "types-psutil", "types-requests"]

[tool.mypy]
disallow_untyped_defs = false  # off globally for now
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "code_manager",
    "config",
    "title",
]
disallow_untyped_defs = true