[project]
name = "translator-BOT"
version = "2.2.1"
description = "Automated moderator routines for r/translator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kungming2"},
    {name = "youraveragebear"},
]

[project.optional-dependencies]
dev = ["types-PyYAML", "types-psutil", "types-requests"]

[tool.pytest.ini_options]
testpaths = ["testing/unit", "testing/integrations"]
python_files = "test_*.py"

[tool.mypy]
disallow_untyped_defs = false  # off globally for now
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["testing.unit.*", "testing.integrations.*"]
ignore_errors = true

[tool.interrogate]
exclude = ["testing"]
ignore-nested-functions = true
ignore-init-module = true
ignore-private = true
ignore-magic = true
ignore-setters = true