[project]
name = "translator-BOT"
version = "2.2.3"
description = "Automated moderator routines for r/translator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["reddit", "moderation", "translation", "bot"]
authors = [
    {name = "kungming2"},
    {name = "youraveragebear"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Internet",
]

[project.urls]
Homepage = "https://github.com/kungming2/translator-BOT-reborn"
Repository = "https://github.com/kungming2/translator-BOT-reborn"
Documentation = "https://github.com/kungming2/translator-BOT-reborn/tree/main/docs"
Issues = "https://github.com/kungming2/translator-BOT-reborn/issues"

[project.optional-dependencies]
dev = [
    "interrogate",
    "mypy",
    "pytest",
    "ruff",
    "types-beautifulsoup4",
    "types-lxml",
    "types-Pillow",
    "types-psutil",
    "types-python-dateutil",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
]

[tool.ruff]
target-version = "py311"
exclude = ["testing"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["testing/unit", "testing/integrations"]
python_files = "test_*.py"
pythonpath = ["."]
filterwarnings = [
    "ignore::urllib3.exceptions.DependencyWarning",
]

[tool.mypy]
disallow_untyped_defs = false  # off globally for now
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["testing.unit.*", "testing.integrations.*"]
ignore_errors = true

[tool.interrogate]
exclude = ["testing"]
ignore-nested-functions = true
ignore-init-module = true
ignore-private = true
ignore-magic = true
ignore-setters = true
